# pdf2htmlEX-Android

./: build.gradle  jitpack.yml
pdf2htmlEX/: CMakeLists.txt  build.gradle
pdf2htmlEX/src/main/cpp/: CMakeLists.txt
